Files/Docs/Мультиметры управление etc/ADL-GPIB/Include/VB/Adgpib.bas


' GPIB-32.DLL routines
Declare Function ibask32 Lib "Gpib-32.dll" Alias "ibask" (ByVal ud As Long, ByVal opt As Long, value As Long) As Long
Declare Function ibbna32 Lib "Gpib-32.dll" Alias "ibbnaA" (ByVal ud As Long, sstr As Any) As Long
Declare Function ibcac32 Lib "Gpib-32.dll" Alias "ibcac" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibclr32 Lib "Gpib-32.dll" Alias "ibclr" (ByVal ud As Long) As Long
Declare Function ibcmd32 Lib "Gpib-32.dll" Alias "ibcmd" (ByVal ud As Long, sstr As Any, ByVal cnt As Long) As Long
Declare Function ibcmda32 Lib "Gpib-32.dll" Alias "ibcmda" (ByVal ud As Long, sstr As Any, ByVal cnt As Long) As Long
Declare Function ibconfig32 Lib "Gpib-32.dll" Alias "ibconfig" (ByVal ud As Long, ByVal opt As Long, ByVal v As Long) As Long
Declare Function ibdev32 Lib "Gpib-32.dll" Alias "ibdev" (ByVal bdid As Long, ByVal pad As Long, ByVal sad As Long, ByVal tmo As Long, ByVal eot As Long, ByVal eos As Long) As Long
Declare Function ibdma32 Lib "Gpib-32.dll" Alias "ibdma" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibeos32 Lib "Gpib-32.dll" Alias "ibeos" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibeot32 Lib "Gpib-32.dll" Alias "ibeot" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibfind32 Lib "Gpib-32.dll" Alias "ibfindA" (sstr As Any) As Long
Declare Function ibgts32 Lib "Gpib-32.dll" Alias "ibgts" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibist32 Lib "Gpib-32.dll" Alias "ibist" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function iblines32 Lib "Gpib-32.dll" Alias "iblines" (ByVal ud As Long, v As Long) As Long
Declare Function ibln32 Lib "Gpib-32.dll" Alias "ibln" (ByVal ud As Long, ByVal pad As Long, ByVal sad As Long, ln As Long) As Long
Declare Function ibloc32 Lib "Gpib-32.dll" Alias "ibloc" (ByVal ud As Long) As Long
Declare Function iblock32 Lib "Gpib-32.dll" Alias "iblock" (ByVal ud As Long) As Long
Declare Function ibonl32 Lib "Gpib-32.dll" Alias "ibonl" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibpad32 Lib "Gpib-32.dll" Alias "ibpad" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibpct32 Lib "Gpib-32.dll" Alias "ibpct" (ByVal ud As Long) As Long
Declare Function ibppc32 Lib "Gpib-32.dll" Alias "ibppc" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibrd32 Lib "Gpib-32.dll" Alias "ibrd" (ByVal ud As Long, sstr As Any, ByVal cnt As Long) As Long
Declare Function ibrda32 Lib "Gpib-32.dll" Alias "ibrd" (ByVal ud As Long, sstr As Any, ByVal cnt As Long) As Long
Declare Function ibrdf32 Lib "Gpib-32.dll" Alias "ibrdfA" (ByVal ud As Long, sstr As Any) As Long
Declare Function ibrpp32 Lib "Gpib-32.dll" Alias "ibrpp" (ByVal ud As Long, sstr As Any) As Long
Declare Function ibrsc32 Lib "Gpib-32.dll" Alias "ibrsc" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibrsp32 Lib "Gpib-32.dll" Alias "ibrsp" (ByVal ud As Long, sstr As Any) As Long
Declare Function ibrsv32 Lib "Gpib-32.dll" Alias "ibrsv" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibsad32 Lib "Gpib-32.dll" Alias "ibsad" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibsic32 Lib "Gpib-32.dll" Alias "ibsic" (ByVal ud As Long) As Long
Declare Function ibsre32 Lib "Gpib-32.dll" Alias "ibsre" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibstop32 Lib "Gpib-32.dll" Alias "ibstop" (ByVal ud As Long) As Long
Declare Function ibtmo32 Lib "Gpib-32.dll" Alias "ibtmo" (ByVal ud As Long, ByVal v As Long) As Long
Declare Function ibtrg32 Lib "Gpib-32.dll" Alias "ibtrg" (ByVal ud As Long) As Long
Declare Function ibwait32 Lib "Gpib-32.dll" Alias "ibwait" (ByVal ud As Long, ByVal mask As Long) As Long
Declare Function ibwrt32 Lib "Gpib-32.dll" Alias "ibwrt" (ByVal ud As Long, sstr As Any, ByVal cnt As Long) As Long
Declare Function ibwrta32 Lib "Gpib-32.dll" Alias "ibwrt" (ByVal ud As Long, sstr As Any, ByVal cnt As Long) As Long
Declare Function ibwrtf32 Lib "Gpib-32.dll" Alias "ibwrtfA" (ByVal ud As Long, sstr As Any) As Long
Declare Function gpib_get_globals32 Lib "Gpib-32.dll" Alias "gpib_get_globals" (ibsta As Integer, iberr As Integer, ibcnt As Integer, ibcntl As Long) As Long
Declare Sub AllSpoll32 Lib "Gpib-32.dll" Alias "AllSpoll" (ByVal ud As Long, arg1 As Any, arg2 As Any)
Declare Sub DevClear32 Lib "Gpib-32.dll" Alias "DevClear" (ByVal ud As Long, ByVal v As Long)
Declare Sub DevClearList32 Lib "Gpib-32.dll" Alias "DevClearList" (ByVal ud As Long, arg1 As Any)
Declare Sub EnableLocal32 Lib "Gpib-32.dll" Alias "EnableLocal" (ByVal ud As Long, arg1 As Any)
Declare Sub EnableRemote32 Lib "Gpib-32.dll" Alias "EnableRemote" (ByVal ud As Long, arg1 As Any)
Declare Sub FindLstn32 Lib "Gpib-32.dll" Alias "FindLstn" (ByVal ud As Long, arg1 As Any, arg2 As Any, ByVal limit As Long)
Declare Sub FindRQS32 Lib "Gpib-32.dll" Alias "FindRQS" (ByVal ud As Long, arg1 As Any, result As Long)
Declare Sub PassControl32 Lib "Gpib-32.dll" Alias "PassControl" (ByVal ud As Long, ByVal addr As Long)
Declare Sub PPoll32 Lib "Gpib-32.dll" Alias "PPoll" (ByVal ud As Long, result As Long)
Declare Sub PPollConfig32 Lib "Gpib-32.dll" Alias "PPollConfig" (ByVal ud As Long, ByVal addr As Long, ByVal line As Long, ByVal sense As Long)
Declare Sub PPollUnconfig32 Lib "Gpib-32.dll" Alias "PPollUnconfig" (ByVal ud As Long, arg1 As Any)
Declare Sub RcvRespMsg32 Lib "Gpib-32.dll" Alias "RcvRespMsg" (ByVal ud As Long, arg1 As Any, ByVal cnt As Long, ByVal term As Long)
Declare Sub ReadStatusByte32 Lib "Gpib-32.dll" Alias "ReadStatusByte" (ByVal ud As Long, ByVal addr As Long, result As Long)
Declare Sub Receive32 Lib "Gpib-32.dll" Alias "Receive" (ByVal ud As Long, ByVal addr As Long, arg1 As Any, ByVal cnt As Long, ByVal term As Long)
Declare Sub ReceiveSetup32 Lib "Gpib-32.dll" Alias "ReceiveSetup" (ByVal ud As Long, ByVal addr As Long)
Declare Sub ResetSys32 Lib "Gpib-32.dll" Alias "ResetSys" (ByVal ud As Long, arg1 As Any)
Declare Sub Send32 Lib "Gpib-32.dll" Alias "Send" (ByVal ud As Long, ByVal addr As Long, sstr As Any, ByVal cnt As Long, ByVal term As Long)
Declare Sub SendCmds32 Lib "Gpib-32.dll" Alias "SendCmds" (ByVal ud As Long, sstr As Any, ByVal cnt As Long)
Declare Sub SendDataBytes32 Lib "Gpib-32.dll" Alias "SendDataBytes" (ByVal ud As Long, sstr As Any, ByVal cnt As Long, ByVal term As Long)
Declare Sub SendIFC32 Lib "Gpib-32.dll" Alias "SendIFC" (ByVal ud As Long)
Declare Sub SendList32 Lib "Gpib-32.dll" Alias "SendList" (ByVal ud As Long, arg1 As Any, arg2 As Any, ByVal cnt As Long, ByVal term As Long)
Declare Sub SendLLO32 Lib "Gpib-32.dll" Alias "SendLLO" (ByVal ud As Long)
Declare Sub SendSetup32 Lib "Gpib-32.dll" Alias "SendSetup" (ByVal ud As Long, arg1 As Any)
Declare Sub SetRWLS32 Lib "Gpib-32.dll" Alias "SetRWLS" (ByVal ud As Long, arg1 As Any)
Declare Sub TestSRQ32 Lib "Gpib-32.dll" Alias "TestSRQ" (ByVal ud As Long, arg1 As Integer)
Declare Sub TestSys32 Lib "Gpib-32.dll" Alias "TestSys" (ByVal ud As Long, arg1 As Any, arg2 As Any)
Declare Sub WaitSRQ32 Lib "Gpib-32.dll" Alias "WaitSRQ" (ByVal ud As Long, arg1 As Integer)
Declare Sub Trigger32 Lib "Gpib-32.dll" Alias "Trigger" (ByVal ud As Long, ByVal addr As Long)
Declare Sub TriggerList32 Lib "Gpib-32.dll" Alias "TriggerList" (ByVal ud As Long, arg1 As Any)

Sub copy_ibglobals()
    Call gpib_get_globals32(ibsta, iberr, ibcnt, ibcntl)
End Sub

'************************
' 488.1 Functions
'************************

Sub ibask(ByVal ud As Integer, ByVal opt As Integer, rval As Integer)
  Dim res As Long

    Call ibask32(ud, opt, res)
    rval = Long2Int(res)
    Call copy_ibglobals
End Sub

Sub ibbna(ByVal ud As Integer, ByVal udname As String)
    Call ibbna32(ud, ByVal udname)
    Call copy_ibglobals
End Sub

Sub ibcac(ByVal ud As Integer, ByVal v As Integer)
    Call ibcac32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibclr(ByVal ud As Integer)
' Check to see if GPIB Global variables are registered
    Call ibclr32(ud)
    Call copy_ibglobals
End Sub

Sub ibcmd(ByVal ud As Integer, ByVal buf As String)
   Dim cnt As Long
    Call ibcmd32(ud, ByVal buf, cnt)
    Call copy_ibglobals
End Sub

Sub ibcmda(ByVal ud As Integer, ByVal buf As String)
    Dim cnt As Long
    Call ibcmda32(ud, ByVal buf, cnt)
    Call copy_ibglobals
End Sub

Sub ibconfig(ByVal bdid As Integer, ByVal opt As Integer, ByVal v As Integer)
    Call ibconfig32(bdid, opt, v)
    Call copy_ibglobals
End Sub

Sub ibdev(ByVal bdid As Integer, ByVal pad As Integer, ByVal sad As Integer, ByVal tmo As Integer, ByVal eot As Integer, ByVal eos As Integer, ud As Integer)
    ud = Long2Int(ibdev32(bdid, pad, sad, tmo, eot, eos))
    Call copy_ibglobals
End Sub


Sub ibdma(ByVal ud As Integer, ByVal v As Integer)
    Call ibdma32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibeos(ByVal ud As Integer, ByVal v As Integer)
    Call ibeos32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibeot(ByVal ud As Integer, ByVal v As Integer)
    Call ibeot32(ud, v)
    Call copy_ibglobals
End Sub


Sub ibfind(ByVal udname As String, ud As Integer)
    ud = Long2Int(ibfind32(ByVal udname))
    Call copy_ibglobals
End Sub

Sub ibgts(ByVal ud As Integer, ByVal v As Integer)
    Call ibgts32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibist(ByVal ud As Integer, ByVal v As Integer)
    Call ibist32(ud, v)
    Call copy_ibglobals
End Sub

Sub iblines(ByVal ud As Integer, lines As Integer)
   Dim reslines As Long

    Call iblines32(ud, reslines)
    lines = Long2Int(reslines)
    Call copy_ibglobals
End Sub

Sub ibln(ByVal ud As Integer, ByVal pad As Integer, ByVal sad As Integer, ln As Integer)
    Dim resln As Long

    Call ibln32(ud, pad, sad, resln)
    ln = Long2Int(resln)
    Call copy_ibglobals
End Sub

Sub ibloc(ByVal ud As Integer)
    Call ibloc32(ud)
    Call copy_ibglobals
End Sub

Sub ibonl(ByVal ud As Integer, ByVal v As Integer)
    Call ibonl32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibpad(ByVal ud As Integer, ByVal v As Integer)
    Call ibpad32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibpct(ByVal ud As Integer)
    Call ibpct32(ud)
    Call copy_ibglobals
End Sub



Sub ibppc(ByVal ud As Integer, ByVal v As Integer)
    Call ibppc32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibrd(ByVal ud As Integer, buf As String)
    Dim cnt As Long
    cnt = CLng(Len(buf))
    Call ibrd32(ud, ByVal buf, cnt)
    Call copy_ibglobals
End Sub

Sub ibrda(ByVal ud As Integer, buf As String)
    Dim cnt As Long
    cnt = CLng(Len(buf))
    Call ibrda32(ud, ByVal buf, cnt)
    Call copy_ibglobals
End Sub

Sub ibrdf(ByVal ud As Integer, ByVal filename As String)
    Call ibrdf32(ud, ByVal filename)
    Call copy_ibglobals
End Sub

Sub ibrdi(ByVal ud As Integer, ibuf() As Integer, ByVal cnt As Long)
    Call ibrd32(ud, ibuf(0), cnt)
    Call copy_ibglobals
End Sub

Sub ibrdia(ByVal ud As Integer, ibuf() As Integer, ByVal cnt As Long)
    Call ibrda32(ud, ibuf(0), cnt)
    Call copy_ibglobals
End Sub



Sub ibrpp(ByVal ud As Integer, ppr As Integer)
    Static res_str As String * 2

    Call ibrpp32(ud, ByVal res_str)
    ppr = Asc(res_str)
    Call copy_ibglobals
End Sub

Sub ibrsc(ByVal ud As Integer, ByVal v As Integer)
    Call ibrsc32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibrsp(ByVal ud As Integer, spr As Integer)
    Static res_str As String * 2

    Call ibrsp32(ud, ByVal res_str)
    spr = Asc(res_str)
    Call copy_ibglobals
End Sub

Sub ibrsv(ByVal ud As Integer, ByVal v As Integer)
    Call ibrsv32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibsad(ByVal ud As Integer, ByVal v As Integer)
    Call ibsad32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibsic(ByVal ud As Integer)
    Call ibsic32(ud)
    Call copy_ibglobals
End Sub

Sub ibsre(ByVal ud As Integer, ByVal v As Integer)
    Call ibsre32(ud, v)
    Call copy_ibglobals
End Sub

Sub ibstop(ByVal ud As Integer)
    Call ibstop32(ud)
    Call copy_ibglobals
End Sub
